Changes in PixelLight 0.9.2-R3 (not yet released)
- Bugfix: Within some GLSL shaders, the not specified "clamp(float, int, int)" was used, which didn't work on every system


Changes in PixelLight 0.9.2-R2 (released on August 27, 2010)
- Bugfix (Windows): Wrong dependency to debug version of MSVC runtime fixed (libfreetype)


Changes in PixelLight 0.9.2-R1 (released on August 23, 2010 - first public PixelLight release)
- Feature: The PLGui project was replaced by it's third complete refactoring
- Feature: Added XML versions of the PixelLight chunk and the PixelLight mesh file format
- Feature: Linux port improvements, PixelLight now runs as a whole under Linux as well
- Feature: OpenGL ES 2.0 renderer backend for mobile devices
- Feature: Initial support for the mobile platform Maemo (used for example by Nokia N900)
- Feature: PLInput now also supports device output controls such as rumble and force-feedback effects as well as control over device LEDs
- Feature: PLInput now also supports virtual devices for device control mapping
- Change: Application framework refactoring
- Change: PLInput refactoring
- Change: Renamed PLEngine project into PLScene
- Change: Added new PLEngine project
- Change: Merged PLCompositingFixedFunctions and PLCompositingShaders into one common PLCompositing project
- Bugfix: Various bugfixes within PLSound and it's backend implementations like PLSoundOpenAL
- Removed: Debug dialog (new "ingame"-edit features will follow with one of the next PixelLight versions)
- Removed: Loadable type search paths, write for example "Data/Meshes/MyMesh.mesh" instead of "MyMesh.mesh"


Changes in PixelLight 0.9.1-R3 (released on July 01, 2010)
- Feature: PLRenderer now contains a complete new font interface
- Change: "PLRenderer::DrawHelpers" refactoring, internally, there's a fixed functions and shaders based implementation


Changes in PixelLight 0.9.1-R2 (released on June 22, 2010)