@@ -1,5 +1,6 @@
 Changes in PixelLight 0.9.2-R3 (not yet released)
 - Bugfix: Within some GLSL shaders, the not specified "clamp(float, int, int)" was used, which didn't work on every system
+- Bugfix: Fixed PLDemoRendererRTT graphics bug
 
 
 Changes in PixelLight 0.9.2-R2 (released on August 27, 2010)
